2011-10-18  Murray Cumming  <murrayc@murrayc.com>

	libglom: FieldFomatting: Correct some parameter names.
	
	* glom/libglom/data_structure/layout/fieldformatting.h: get_choices_related()
	Rename relationship_name to relatioship. It was already correct in the .cc
	file.

2011-10-18  Murray Cumming  <murrayc@murrayc.com>

	Correct the pkg-config file.

	* glom/libglom/glom.pc.in: Depend on libgdamm-5.0, not ligdamm-4.0.
  And depend on libxslt, because we just moved the xslt stuff into libglom.

2011-10-17  Murray Cumming  <murrayc@murrayc.com>

	Move ReportBuilder to libglom, to make testing easier.

	* glom/report_builder.[h|cc]:
	* glom/xsl_utils.[h|cc]: Moved to:
	* glom/libglom/report_builder.[h|cc]:
	* glom/libglom/xsl_utils.[h|cc]:
	* Makefile_glom.am, Makefile_libglom.am: Adapted, also adding a 
	-D define for libglom to access the xslt file, though I am not happy
	about a library needing a file to be installed.

2011-10-17  Murray Cumming  <murrayc@murrayc.com>

	ReportBuilder: Do not depend on Base_DB unnecessarily.

	* glom/report_builder.[h|cc]: Just add get/set_document() instead.

2011-10-17  Murray Cumming  <murrayc@murrayc.com>

	Move report building code around.

	* glom/report_builder.[h|cc]: report_build(): Return the filepath,
	instead of opening it in the browser.
	* glom/xsl_utils[h|cc]: transform_and_open(): Rename to transform(), 
	returning the filepath. Also correct some ustring filepath to std::string.
	* glom/utils_ui[h|cc]: Added show_report_in_browser().
	* glom/frame_glom.cc: on_menu_report_selected():
	* glom/mode_data/box_data_manyrecords.cc: print_layout: Adapted.

2011-10-17  Murray Cumming  <murrayc@murrayc.com>

	Move some XSLT-processing code around.

	* glom/mode_data/box_data.h: Remove declaration of non-implemented 
	and unused xslt_process() method.
	* glom/xsl_utils.[h|cc]: Move xslt_process() in to the .cc file as a 
	static function.

2011-10-17  Murray Cumming  <murrayc@murrayc.com>

	Move some Report code around.
